Fixed inline popup tooltips are not visible #1141 Issue: https://github.com/xdan/jodit/issues/1141

--- a/src/core/ui/button/tooltip/tooltip.less
+++ b/src/core/ui/button/tooltip/tooltip.less
@@ -39,6 +39,7 @@
 	transition: opacity 0.2s ease 0s;
 	user-select: none;
 	white-space: normal;
+	pointer-events: none;
 
 	@media (max-width: @screen-sm) {
 		display: none;
